--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/theming";
+@include mat-core();
+
+$custom-color: (
+  500: #515A5A,
+  contrast: (
+    500: $black-87-opacity,
+  ),
+);
+
+// mandatory stuff for theming
+$custom-palette-primary: mat-palette($custom-color);
+$custom-palette-accent: mat-palette($custom-color);
+
+// include the custom theme components into a theme object
+$custom-theme: mat-light-theme($custom-palette-primary, $custom-palette-accent);
+
+// include the custom theme object into the angular material theme
+@include angular-material-theme($custom-theme);
+
+html,
+body {
+  height: 100%;
+  background-color: #F7F9F9;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+* {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
