--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,1 +1,42 @@
-<p>home works!</p>
+<div fxLayoutAlign="center center" fxFlexFill class="upload-div">
+
+<div >
+  <img class="logo-image" src="../../../assets/statics/interconection forms_logo.png">
+</div>
+
+<mat-card class="forms-card" fxFlex="90">
+    
+    <table mat-table [dataSource]="forms" class="forms-table"
+    matSort matSortActive="createdAt" matSortDisableClear matSortDirection="desc">
+      
+    <!-- Title Column -->
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef class="header-form-column">Name</th>
+        <td mat-cell *matCellDef="let form" class="data-form-column-title">{{form.title}}</td>
+      </ng-container>
+      
+      <!-- Category Column -->
+      <ng-container matColumnDef="category">
+          <th mat-header-cell *matHeaderCellDef class="header-form-column">Category</th>
+          <td mat-cell *matCellDef="let form" class="data-form-column-category">{{form.category}}</td>
+        </ng-container>
+        
+        <!-- Created Column -->
+         <ng-container matColumnDef="createdAt">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear class="header-form-column">
+            Date Created
+          </th>
+          <td mat-cell *matCellDef="let form" class="data-form-column-date">{{form.createdAt | date}}</td>
+        </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="formsTableColumns"></tr>
+      <tr mat-row *matRowDef="let form; columns: formsTableColumns;"></tr>
+
+    </table>
+
+    <mat-paginator [length]="forms.length" [pageSize]="formsPageLimit" ></mat-paginator>
+
+    <div class="loading-spinner" *ngIf="isLoadingResults">
+        <mat-spinner *ngIf="isLoadingResults" [diameter]="30"></mat-spinner>
+    </div>
+</mat-card>
