--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -30,8 +30,8 @@
   margin-top: 10px;
   align-self: center;
   text-align: center;
-  background-color: #0a1116;
-  color: #99dbf8;
+  background-color: #EAEDED;
+  color: #3a3735;
   font-size: medium;
   width: 50%;
 }
@@ -69,8 +69,8 @@
     margin-top: 10px;
     align-self: center;
     text-align: center;
-    background-color: #0a1116;
-    color: #99dbf8;
+    background-color: #EAEDED;
+    color: #3a3735;
     font-size: medium;
     width: 50%;
   }
