Demo: {username: dummy, password 123456}

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-login></app-login>
+<body>
+    <app-login *ngIf="!authDone" (authDoneEvent)="setAuthDone($event)" (sendUsernameEvent)="setUsername($event)"></app-login>
+    <app-sidebar *ngIf="authDone"></app-sidebar>
+    <app-home *ngIf="authDone"></app-home>
+</body>
